--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>final task</title>
+	<title>collage</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
